# smart-bookmarking

./: .gitignore  Cargo.toml  Procfile  RustConfig  rust-toolchain  rust-toolchain.toml
src/: bookmarks.json  main.rs
src/utils/: bookmarks.rs  github.rs  google.rs  mod.rs  twitter.rs
static/: bookmarks.css
templates/: 404.html.tera  add-bookmark.html.tera  add-command.html.tera  bookmark.html.tera  bookmarks.html.tera  index.html.tera
