[package]
name = "smart-bookmarking"
version = "0.1.0"
authors = ["Kieran Raine <kraine93@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
percent-encoding = "2.1.0"
rocket = "0.4.7"
rocket_contrib = { version="0.4.7", default-features = false, features = ["tera_templates", "json"] }
serde = { version="1.0.124", features = ["derive"] }
serde_json = "1.0.64"
tera = "1.7.0"
